[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "site-info-extractor-agent"
version = "0.1.0"
description = "基于 LangChain 和 LangGraph 的网站信息提取 Agent"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["langchain", "langgraph", "agent", "web-scraping", "information-extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "langchain>=1.2.3",
    "langchain-core>=1.2.6",
    "langgraph>=1.0.0",
    "langchain-openai>=1.1.7",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.4.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.0.0",
    "tavily-python>=0.5.0",
    "playwright>=1.48.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "aiohttp>=3.9.0",
    "rich>=13.7.0",
    "typing-extensions>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
site-extractor = "src.main:main"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313", "py314"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
